# cocooker

./: .gitignore  README.md  requirements.txt
analysis/data/: pot_pick_data.csv  pot_pick_data2.csv
analysis/notebooks/: pick_and_place_pot_yolo_validation.py  validataion.py
src/kitchen_assistant/: package.xml  setup.cfg  setup.py
src/kitchen_assistant/kitchen_assistant/: onrobot.py  plot_result.py  utils.py
src/kitchen_assistant/kitchen_assistant/legacy/: fridge_leftdown_close.py  fridge_leftdown_open.py  fridge_leftup_close.py  fridge_leftup_open.py  fridge_open_then_apple_pick.py  fridge_rightdown_close.py  fridge_rightdown_open.py  fridge_rightup_close.py  fridge_rightup_open.py  pick_and_place_apple_yolo.py  pick_and_place_bottle_yolo.py  pick_and_place_cup_yolo.py  pick_and_place_knife.py  pick_and_place_orange_yolo.py  pick_and_place_pan_yolo.py  pick_and_place_pot_yolo.py  pick_and_place_ramen_yolo.py  pick_and_place_scissors_yolo.py  pick_and_place_spatula_yolo.py  pick_and_place_spoon_yolo.py  pytorch_version.py
src/kitchen_assistant/kitchen_assistant/nodes/: kitchen_cli.py  kitchen_voice.py
src/kitchen_assistant/kitchen_assistant/tools/: robot_movej.py
src/kitchen_assistant/kitchen_assistant/voice/: command_parser.py  runner.py  stt_openai.py  wakeup_word.py
src/kitchen_assistant/launch/: kitchen_cli.launch.py  kitchen_voice.launch.py
src/ui_node/: package.xml  setup.py
src/ui_node/ui_node/: firebase_ros2_bridge_fixed.py  ui_clean.html
